--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,3 +12,9 @@ before_build:
 - ps: nuget restore
 build:
   project: TextFile.sln
+after_build:
+- ps: >-
+    .\Deploy\archive.ps1
+artifacts:
+- path: TextFile.zip
+  name: archive
